# diffin

./: Cargo.toml  README.md
src/: lib.rs
src/suffix/: iter.rs  mod.rs
